# random-algorithm

./: MANIFEST.in  README.md  pyproject.toml  setup.py
random_algorithm/: __init__.py  random_algorithm.py  words_list.py
random_algorithm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
